# TS-tools

./: .autode_calculations  .gitignore  README.md  environment.yml  path.inp  reactions_am.txt  reactions_am_filtered.txt  reactions_am_final.txt  setup.cfg
data/: test_aldol.txt  test_co.txt  test_eas.txt  test_rahm.txt
run_scripts/: copy_final_outputs.py  dft_validation.py  run_dft_validation.py  run_full_profile.py  run_generator.py  run_ts_searcher.py  run_ts_searcher_benchmarking.py  run_ts_searcher_dft.py
run_scripts/old/: run_generator_intermediate.py  run_generator_old.py  run_generator_parallel.py
src/reaction_profile_generator/: confirm_imag_modes.py  confirm_ts_guess.py  generator.py  generator_old2.py  get_path.py  irc_search.py  path_generator.py  refine_ts.py  relax_path.py  ts_optimizer.py  utils.py
src/reaction_profile_generator.egg-info/: PKG-INFO  SOURCES.txt
src/reaction_profile_generator/latest/: path_generator kopie.py
src/reaction_profile_generator/old/: confirm_imag_modes_old.py  confirm_imag_modes_old2.py  generator_old.py  generator_old2.py  refine_ts kopie.py  refine_ts_old.py
src/ts_tools/: irc_search.py  path_generator.py  ts_optimizer.py
src/ts_tools.egg-info/: PKG-INFO  SOURCES.txt
src/tstools/: __init__.py  confirm_ts_guess.py  conformational_search.py  irc_search.py  path_analyzer.py  path_generator.py  reaction.py  ts_optimizer.py  utils.py
src/tstools.egg-info/: PKG-INFO
test/: input.xyz
xtb_external_script/: xtb_external.py
