
[metadata]
name = reaction_profile_generator
version = 0.3.2
license = MIT
description = Generate reaction profiles based on a reaction SMILES
long_description = file: README.md
author = Thijs Stuyver
#author_email = 
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True
#install_requires =
#   numpy
#   pandas
#   joblib

[options.packages.find]
where=src