
[metadata]
name = ts_tools
version = 0.4.2
license = MIT
description = Tools to generate reaction profiles based on a reaction SMILES input
long_description = file: README.md
author = Thijs Stuyver
classifiers=

[options]
packages = find:
package_dir =
    =src
include_package_data = True

[options.packages.find]
where=src